--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
+    "@tsconfig/svelte": "^1.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-svelte3": "^2.7.3",
+    "prettier-plugin-svelte": "^1.4.1",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
@@ -17,15 +24,8 @@
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "typescript": "^3.9.3",
     "tslib": "^2.0.0",
-    "@tsconfig/svelte": "^1.0.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-svelte3": "^2.7.3",
-    "prettier-plugin-svelte": "^1.4.1"
+    "typescript": "^3.9.3"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
