--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,21 +3,22 @@
   "short_name": "Kanaskulator",
   "icons": [
     {
-      "src": "favicon-192x192.png",
+      "src": "/images/icons/favicon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "favicon-512x512.png",
+      "src": "/images/icons/favicon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": "/index.html",
-  "scope": ".",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#fff",
   "theme_color": "#007bff",
   "orientation": "portrait",
-  "lang": "pl_PL"
+  "lang": "pl",
+  "prefer_related_applications": false
 }
